# streamtest

./: .gitignore  README.md  pyproject.toml
chat/: routing.py
chat/templates/: index.html
django_project/: asgi.py  settings.py  urls.py
