[tool.poetry]
name = "streamtest"
version = "0.1.0"
description = ""
authors = ["Kai Breitbarth <kai.breitbarth@amanngirrbach.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
channels = "^4.0.0"
channels-redis = "^4.1.0"
daphne = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
